test fix overflow mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@
   border: 0;
   box-sizing: border-box; }
 
+html {
+  overflow: hidden; }
+
 a {
   text-decoration: none; }
 
@@ -84,8 +87,7 @@ a {
   display: flex;
   position: absolute;
   height: 100vh;
-  max-height: 100%;
-  overflow: hidden; }
+  max-height: 100%; }
   .figure .figure__img {
     display: inline-block;
     position: relative;
