--- a/css/scss/base/_reset.scss
+++ b/css/scss/base/_reset.scss
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
 }
