--- a/css/scss/components/_figure.scss
+++ b/css/scss/components/_figure.scss
@@ -4,7 +4,6 @@
   position: absolute;
   height: 100vh;
   max-height: 100%;
-  overflow: hidden;
     .figure__img {
       display: inline-block;
       position: relative;
